tests/aster/x/mochi/rosetta/compiler-virtual-machine-interpreter.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/compiler-virtual-machine-interpreter.mochi:29:14

 29 |     let ch = substring(s, i, i+1)
    |              ^

help:
  Declare substring before use
